--- a/expo/android/app/src/main/res/values/strings.xml
+++ b/expo/android/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
   <string name="app_name">snowstream</string>
   <string name="expo_splash_screen_resize_mode" translatable="false">contain</string>
   <string name="expo_splash_screen_status_bar_translucent" translatable="false">false</string>
+  <string name="expo_navigation_bar_legacy_visible" translatable="false">sticky-immersive</string>
 </resources>
