Fix edge-to-edge deprecations

--- a/expo/android/app/src/main/res/values/strings.xml
+++ b/expo/android/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
   <string name="app_name">snowstream</string>
-  <string name="expo_navigation_bar_legacy_visible" translatable="false">sticky-immersive</string>
   <string name="expo_splash_screen_resize_mode" translatable="false">contain</string>
   <string name="expo_splash_screen_status_bar_translucent" translatable="false">false</string>
+  <string name="expo_navigation_bar_visibility" translatable="false">hidden</string>
+  <string name="expo_navigation_bar_position" translatable="false">absolute</string>
+  <string name="expo_navigation_bar_behavior" translatable="false">overlay-swipe</string>
 </resources>
